--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                              <div class="disc">
                                  <p>is a text written expressly for a work in an <span style="color: #675D50;">imagined narrative</span> that is mentioned, seen, or quoted in a tale, book, movie, or other fictional work, and which only appears in one or more fictitious works. A fictitious book could be written to give a bigger fictional work more authenticity or depth.</p>
                              </div>
-                             <button><a href="./assest/pages/subcategory/fiction.html">Explore More</a></button>
+                             <button><a href="/pages/fiction.html">Explore More</a></button>
                          </div>
                      </div>
                  </div>
@@ -86,7 +86,7 @@
                                  <div class="cate-img-display">
                                      <div class="position">
                                          <img src="./assest/image/homepage/fiction-book1.jpg" alt="vera wong's unsoclicited advice for murderers book image">
-                                         <a href="/assest/pages/bookdetail/fiction/anna.html">
+                                         <a href="/pages/anna.html">
                                              <div class="overlay-buy">
                                                  <i class="fa-solid fa-cart-shopping"></i>
                                              </div>
@@ -103,7 +103,7 @@
                                      <p>$17.61 <span style="text-decoration: line-through; color: red;">$19.99</span></p>
                                  </div>
                                  <div class="buy">
-                                     <a href="./assest/pages//bookdetail/fiction/anna.html"><button>ADD TO CART </button></a>
+                                     <a href="/pages/anna.html"><button>ADD TO CART </button></a>
                                      <p>4.08/5⭐</p>
                                  </div>
                              </div>
@@ -116,7 +116,7 @@
                                  <div class="cate-img-display">
                                      <div class="position">
                                          <img src="./assest/image/homepage/fiction-book2.jpg" alt="trust image">
-                                         <a href="/assest/pages/bookdetail/fiction/trust.html">
+                                         <a href="/pages/trust.html">
                                              <div class="overlay-buy">
                                                  <i class="fa-solid fa-cart-shopping"></i>
                                              </div>
@@ -132,7 +132,7 @@
                                      <p>$16.99 <span style="text-decoration: line-through; color: red;">$28.00</span></p>
                                  </div>
                                  <div class="buy">
-                                     <a href="/assest/pages/bookdetail/fiction/trust.html"><button>ADD TO CART </button></a>
+                                     <a href="/pages/trust.html"><button>ADD TO CART </button></a>
                                      <p>4/5⭐</p>
                                  </div>
                              </div>
@@ -144,7 +144,7 @@
                              <div class="cate-img">
                                  <div class="cate-img-display">
                                      <div class="position">
-                                         <a href="/assest/pages/bookdetail/fiction/sea.html">
+                                         <a href="/pages/sea.html">
                                              <img src="./assest/image/homepage/fiction-book3.jpg" alt="beyond that, the sea image">
                                              <div class="overlay-buy">
                                                  <i class="fa-solid fa-cart-shopping"></i>
@@ -161,7 +161,7 @@
                                      <p>$15.99 <span style="text-decoration: line-through; color: red;">$28.00</span></p>
                                  </div>
                                  <div class="buy">
-                                     <a href="/assest/pages/bookdetail/fiction/sea.html"><button>ADD TO CART </button></a>
+                                     <a href="/pages/sea.html"><button>ADD TO CART </button></a>
                                      <p>4/5⭐</p>
                                  </div>
                              </div>
@@ -173,7 +173,7 @@
                              <div class="cate-img">
                                  <div class="cate-img-display">
                                  <div class="position">
-                                         <a href="/assest/pages/bookdetail/fiction/sea.html">
+                                         <a href="#">
                                              <img src="./assest/image/homepage/fiction-book4.jpg" alt="hello beautiful image">
                                              <div class="overlay-buy">
                                                  <i class="fa-solid fa-cart-shopping"></i>
@@ -190,7 +190,7 @@
                                      <p>$13.99 <span style="text-decoration: line-through; color: red;">$15.71</span></p>
                                  </div>
                                  <div class="buy">
-                                     <a href="/assest/pages/bookdetail/fiction/sea.html"><button>ADD TO CART </button></a>
+                                     <a href="/sea.html"><button>ADD TO CART </button></a>
                                      <p>4/5⭐</p>
                                  </div>
                              </div>
@@ -212,7 +212,7 @@
                              <div class="disc nonfiction-disc">
                                  <p> is any document or media content that attempts, in good faith, to convey information only about <span style="color: #f3deba"> the real world</span>, rather than being grounded in imagination. Non-fiction typically aims to present topics objectively based on historical, scientific, and empirical information.</p>
                              </div>
-                             <button class="nonfiction-btn"><a href="/assest/pages/subcategory/non-fiction.html">Explore More</a></button>
+                             <button class="nonfiction-btn"><a href="/non-fiction.html">Explore More</a></button>
                          </div>
                      </div>
                  </div>
@@ -390,7 +390,7 @@
                              </a>
                          </li>
                          <li>
-                             <a href="/assest/pages/contact/contact.html">
+                             <a href="/pages/contact.html">
                                  Contact Us
                                  <div class="line"></div>
                              </a>
