--- a/pages/fiction.html
+++ b/pages/fiction.html
@@ -1,3 +1,12 @@
+<!-- 
+    RMIT University Vietnam
+    Course: COSC2430 Web Programming
+    Semester: 2023A
+    Assessment: Assignment 1
+    Author: Truong Quang Bao Loc
+    ID: s3965528
+    Acknowledgement: Acknowledge the resources that you use here.
+ -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -42,7 +51,7 @@
         <div class="breadcrumb">
             <a href="/index.html"><div class="breadcrumb-content">HOME</div></a>
             <div class="breadcrumb-content">></div>
-            <a href="#"><div class="breadcrumb-content">FICTION</div></a>
+            <a href="/pages/fiction.html"><div class="breadcrumb-content">FICTION</div></a>
         </div>
     </header>
     <!-- subcategory -->
@@ -462,7 +471,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="/assest/pages/contact/contact.html">
+                            <a href="/pages/contact.html">
                                 Contact Us
                                 <div class="line"></div>
                             </a>
