--- a/pages/trust.html
+++ b/pages/trust.html
@@ -49,7 +49,7 @@
          <div class="breadcrumb">
              <a href="/index.html"><div class="breadcrumb-content">HOME</div></a>
              <div class="breadcrumb-content">></div>
-             <a href="/assest/pages/subcategory/fiction.html"><div class="breadcrumb-content">FICTION</div></a>
+             <a href="/pages/fiction.html"><div class="breadcrumb-content">FICTION</div></a>
              <div class="breadcrumb-content">></div>
              <a href="#"><div class="breadcrumb-content">TRUST</div></a>
          </div>
@@ -230,7 +230,7 @@ With its unique structure, elegant writing, interesting characters (even the imm
                              </a>
                          </li>
                          <li>
-                             <a href="">
+                             <a href="/pages/contact.html">
                                  Contact Us
                                  <div class="line"></div>
                              </a>
