--- a/pages/sea.html
+++ b/pages/sea.html
@@ -49,7 +49,7 @@
          <div class="breadcrumb">
              <a href="/index.html"><div class="breadcrumb-content">HOME</div></a>
              <div class="breadcrumb-content">></div>
-             <a href="/assest/pages/subcategory/fiction.html"><div class="breadcrumb-content">FICTION</div></a>
+             <a href="/pages/fiction.html"><div class="breadcrumb-content">FICTION</div></a>
              <div class="breadcrumb-content">></div>
              <a href="#"><div class="breadcrumb-content">BEYOND THAT, THE SEA</div></a>
          </div>
@@ -238,7 +238,7 @@ But here I am, wishing the book wasn't so sad. And then we get towards the end a
                              </a>
                          </li>
                          <li>
-                             <a href="">
+                             <a href="/pages/contact.html">
                                  Contact Us
                                  <div class="line"></div>
                              </a>
