--- a/pages/fiction.html
+++ b/pages/fiction.html
@@ -16,7 +16,7 @@
     <title>Viol</title>
     <link href="https://fonts.googleapis.com/css2?family=Rokkitt:wght@100;300;500;600&display=swap" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="/assest/image/homepage/Viol-logo.png">
-    <link rel="stylesheet" href="/assest/image/subcategory/style/fiction/style.css">
+    <link rel="stylesheet" type="text/css" href="/assest/image/subcategory/style/fiction/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
 </head>
 <body>
