--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
      <meta http-equiv="X-UA-Compatible" content="IE=edge">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>Viol</title>
-     <link rel="stylesheet" href="/assest/style/style.css">
+     <link rel="stylesheet" href="/assest/style/">
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
      <link rel="preconnect" href="https://fonts.googleapis.com">
      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -63,6 +63,7 @@
                  </div>
                  <div class="cate">
                      <div class="left col l-6 mc-6 cc-12">
+                        <img src="/assest/image/homepage/fiction.jpg" alt="fiction">
                      </div>
                      <div class="right col l-6 mc-6 cc-12">
                          <div class="content">
